# CSCI404_Projects

Project_1/: .gitignore  CMakeLists.txt  README.md
Project_1/include/: find_route.h  node.h
Project_1/src/: find_route.cpp
Project_1/test_files/: input1_testcases.txt  input3.txt  input3_testcases.txt
Project_2/: CMakeLists.txt  README.md
Project_2/include/: maxconnect4.hpp  node.h
Project_2/src/: maxconnect4.cpp
Project_2/test_files/: input3.txt  testcase1.txt  testcase2.txt  testcase3.txt  testcase4.txt  testcase5.txt
